[package]
name = "transitwiki"
version = "0.1.0"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
ansi_term = "0.12"
gtfs-structures = "0.13"
itertools = "0.8"
json = "0.12"
log = "0.4"
pretty_env_logger = "0.3"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
failure = "0.1"
toml = "0.5"
