[package]
name = "transit-topo"
version = "0.1.0"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
ansi_term = "0.12"
gtfs-structures = "0.14"
Inflector = { version="0.11", default-features=false }
itertools = "0.8"
json = "0.12"
log = "0.4"
pretty_env_logger = "0.3"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
toml = "0.5"
thiserror = "1"
anyhow = "1"
lazy_static = "1.4"
regex = "1.3"
git-version = "0.3"
chrono = "0.4"

[dev-dependencies]
docker-compose = { git = "https://github.com/antoine-de/rust-docker-compose.git", rev = "312d515" }
#docker-compose = { git = "https://github.com/sfackler/rust-docker-compose.git" }
assert_cmd = "0.11"
maplit = "1"
pretty_assertions = "0.6"

